Created APIs for Product
